Refined CV and updated portfolio

--- a/netlify-deploy/index.html
+++ b/netlify-deploy/index.html
@@ -63,7 +63,7 @@
         <a href="#projects" class="nav-link">Projects</a>
         <a href="#contact" class="nav-link">Contact</a>
         <a href="./resume-short.html" class="nav-link resume-btn" target="_blank">
-          <i class="fas fa-user"></i> About Me
+          <i class="fas fa-download"></i> Resume
         </a>
       </div>
       
@@ -98,8 +98,8 @@
                 <span class="stat-label">Projects</span>
               </div>
               <div class="stat-item">
-                <span class="stat-number" data-target="2">0</span>
-                <span class="stat-label">Years Learning</span>
+                <span class="stat-number" data-target="1">0</span>
+                <span class="stat-label">Years Experience</span>
               </div>
               <div class="stat-item">
                 <span class="stat-number" data-target="15">0</span>
@@ -534,7 +534,7 @@
           
           <div class="link-group">
             <h4>Resources</h4>
-            <a href="./resume-short.html" target="_blank">My CV</a>
+            <a href="./resume-short.html" target="_blank">Resume</a>
             <a href="https://github.com/ayni2421" target="_blank">GitHub</a>
           </div>
         </div>
