--- a/netlify-deploy/resume-short.html
+++ b/netlify-deploy/resume-short.html
@@ -140,9 +140,9 @@
     <div class="section">
         <div class="section-title">Summary</div>
         <div class="summary">
-            Dedicated Software Engineering student with 2+ years of hands-on experience in full-stack web development. 
-            Specialized in building scalable web applications using React.js, Node.js, and PostgreSQL. 
-            Proven track record of delivering complete projects from concept to deployment, including university management systems and community platforms.
+            Software Engineering student with experience in full-stack web development. 
+            Proficient in JavaScript, React, Python, and database technologies. 
+            Seeking opportunities to contribute to innovative software projects.
         </div>
     </div>
 
@@ -151,19 +151,19 @@
         <div class="skills">
             <div class="skill-group">
                 <h4>Frontend</h4>
-                <div>React.js, JavaScript ES6+, HTML5, CSS3, Bootstrap 5</div>
+                <div>HTML5, CSS3, JavaScript, React</div>
             </div>
             <div class="skill-group">
                 <h4>Backend</h4>
-                <div>Node.js, Express.js, Python, Java, REST APIs</div>
+                <div>Python, Node.js, Java</div>
             </div>
             <div class="skill-group">
                 <h4>Database</h4>
-                <div>PostgreSQL, MongoDB, Sequelize ORM</div>
+                <div>PostgreSQL, MongoDB</div>
             </div>
             <div class="skill-group">
-                <h4>Tools & Technologies</h4>
-                <div>Git, Docker, JWT Auth, Socket.io, Multer, Nodemailer</div>
+                <h4>Tools</h4>
+                <div>Git, Docker, VS Code</div>
             </div>
         </div>
     </div>
@@ -173,40 +173,29 @@
         
         <div class="project">
             <div class="project-header">
-                <div class="project-title">DMU Service Hub - University Management System</div>
+                <div class="project-title">Todo List Application</div>
                 <div class="project-date">2024</div>
             </div>
-            <div class="project-tech">React.js, Node.js, Express.js, PostgreSQL, Socket.io, JWT Authentication</div>
-            <div class="project-desc">Comprehensive student service management system for De Montfort University. Features real-time notifications, document management, and administrative dashboard with complete CRUD operations.</div>
+            <div class="project-tech">JavaScript, CSS3, Local Storage</div>
+            <div class="project-desc">Task management app with drag-and-drop functionality and data persistence.</div>
         </div>
 
         <div class="project">
             <div class="project-header">
-                <div class="project-title">Full-Stack Todo List Application</div>
+                <div class="project-title">Church Community Website</div>
                 <div class="project-date">2024</div>
             </div>
-            <div class="project-tech">React, Node.js, Express.js, PostgreSQL, REST API, Bootstrap 5</div>
-            <div class="project-desc">Professional todo application with React frontend and Node.js backend. Includes CRUD operations, real-time updates, input validation, and modern glassmorphism UI design.</div>
-        </div>
-
-        <div class="project">
-            <div class="project-header">
-                <div class="project-title">Nablis - Ethiopian Orthodox Church Management System</div>
-                <div class="project-date">2024</div>
-            </div>
-            <div class="project-tech">React.js 19, Node.js, Express.js 4, PostgreSQL, Socket.io, Winston Logging</div>
-            <div class="project-desc">Full-stack web application for St. Mary Ethiopian Orthodox Tewahedo Church. Features multi-step registration with Ethiopian/Amharic labels, role-based access control, real-time messaging, and event management.</div>
+            <div class="project-tech">HTML5, Bootstrap, JavaScript</div>
+            <div class="project-desc">Responsive community website with event management features.</div>
         </div>
     </div>
 
     <div class="section">
         <div class="section-title">Education & Additional</div>
         <div class="summary">
-            <strong>Education:</strong> Bachelor of Software Engineering, Debre Markos University (Expected 2026)<br>
-            <strong>Experience:</strong> 2+ years of hands-on full-stack development<br>
+            <strong>Education:</strong> Bachelor of Software Engineering (Expected 2026)<br>
             <strong>Languages:</strong> English (Fluent), Amharic (Native)<br>
-            <strong>Specializations:</strong> Full-Stack Web Development, Database Design, Real-time Applications<br>
-            <strong>Status:</strong> Seeking software engineering opportunities and internships
+            <strong>Status:</strong> Seeking software engineering opportunities
         </div>
     </div>
 </body>
