Update portfolio content and styling

--- a/netlify-deploy/index.html
+++ b/netlify-deploy/index.html
@@ -52,7 +52,7 @@
   <nav class="navbar" id="navbar" role="navigation" aria-label="Main navigation">
     <div class="nav-container">
       <div class="nav-brand">
-        <img src="images/logo.jpg" alt="Ayenadis Temesgen" class="nav-logo" loading="lazy">
+        <img src="images/logo.jpg" alt="Ayenadis Temesgen" class="nav-logo" loading="lazy" width="40" height="40">
         <span class="nav-name">Ayenadis</span>
       </div>
       
@@ -153,7 +153,7 @@
           <div class="hero-image animate-slide-right">
             <div class="image-wrapper">
               <div class="image-border"></div>
-              <img src="images/ayenadisT.jpg" alt="Ayenadis Temesgen - Software Engineer" class="profile-img">
+              <img src="images/ayenadisT.jpg" alt="Ayenadis Temesgen - Software Engineer" class="profile-img" width="400" height="400">
               <div class="status-badge">
                 <span class="status-dot"></span>
                 Available for opportunities
@@ -541,7 +541,7 @@
       <div class="footer-content">
         <div class="footer-info">
           <div class="footer-brand">
-            <img src="images/logo.jpg" alt="Ayenadis Temesgen" class="footer-logo">
+            <img src="images/logo.jpg" alt="Ayenadis Temesgen" class="footer-logo" width="32" height="32">
             <span>Ayenadis Temesgen</span>
           </div>
           <p>Building the future, one line of code at a time.</p>
