Fix social media preview - update Open Graph meta tags with absolute URLs and cache busting

--- a/netlify-deploy/index.html
+++ b/netlify-deploy/index.html
@@ -13,16 +13,20 @@
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://ayenadis.dev/">
+  <meta property="og:url" content="https://ayenadis-portfolio.netlify.app/">
   <meta property="og:title" content="Ayenadis Temesgen | Software Engineer">
   <meta property="og:description" content="Building innovative web applications with cutting-edge technologies">
-  <meta property="og:image" content="./images/ayenadisT.jpg">
+  <meta property="og:image" content="https://ayenadis-portfolio.netlify.app/images/ayenadisT.jpg?v=2025">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:type" content="image/jpeg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://ayenadis.dev/">
+  <meta property="twitter:url" content="https://ayenadis-portfolio.netlify.app/">
   <meta property="twitter:title" content="Ayenadis Temesgen | Software Engineer">
   <meta property="twitter:description" content="Building innovative web applications with cutting-edge technologies">
+  <meta property="twitter:image" content="https://ayenadis-portfolio.netlify.app/images/ayenadisT.jpg?v=2025">
   <meta property="twitter:image" content="./images/ayenadisT.jpg">
 
   <title>Ayenadis Temesgen | Software Engineer & Full-Stack Developer</title>
