--- a/netlify-deploy/index.html
+++ b/netlify-deploy/index.html
@@ -16,7 +16,7 @@
   <meta property="og:url" content="https://ayenadis-portfolio.netlify.app/">
   <meta property="og:title" content="Ayenadis Temesgen | Software Engineer">
   <meta property="og:description" content="Building innovative web applications with cutting-edge technologies">
-  <meta property="og:image" content="https://ayenadis-portfolio.netlify.app/images/ayenadisT.jpg?v=2025">
+  <meta property="og:image" content="https://ayenadis-portfolio.netlify.app/images/ayenadis-profile-2025.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:image:type" content="image/jpeg">
@@ -26,8 +26,8 @@
   <meta property="twitter:url" content="https://ayenadis-portfolio.netlify.app/">
   <meta property="twitter:title" content="Ayenadis Temesgen | Software Engineer">
   <meta property="twitter:description" content="Building innovative web applications with cutting-edge technologies">
-  <meta property="twitter:image" content="https://ayenadis-portfolio.netlify.app/images/ayenadisT.jpg?v=2025">
-  <meta property="twitter:image" content="./images/ayenadisT.jpg">
+  <meta property="twitter:image" content="https://ayenadis-portfolio.netlify.app/images/ayenadis-profile-2025.jpg">
+
 
   <title>Ayenadis Temesgen | Software Engineer & Full-Stack Developer</title>
   
@@ -157,7 +157,7 @@
           <div class="hero-image animate-slide-right">
             <div class="image-wrapper">
               <div class="image-border"></div>
-              <img src="images/ayenadisT.jpg" alt="Ayenadis Temesgen - Software Engineer" class="profile-img" width="400" height="400">
+              <img src="images/ayenadis-profile-2025.jpg" alt="Ayenadis Temesgen - Software Engineer" class="profile-img" width="400" height="400">
               <div class="status-badge">
                 <span class="status-dot"></span>
                 Available for opportunities
