Add Open Graph prefix and update timestamp for Telegram cache refresh

--- a/netlify-deploy/index.html
+++ b/netlify-deploy/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +16,7 @@
   <meta property="og:url" content="https://ayenadis-portfolio.netlify.app/">
   <meta property="og:title" content="Ayenadis Temesgen | Software Engineer">
   <meta property="og:description" content="Building innovative web applications with cutting-edge technologies">
-  <meta property="og:image" content="https://ayenadis-portfolio.netlify.app/images/ayenadis-profile-2025.jpg?t=1738073200">
+  <meta property="og:image" content="https://ayenadis-portfolio.netlify.app/images/ayenadis-profile-2025.jpg?t=1738074000">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:image:type" content="image/jpeg">
@@ -26,7 +26,7 @@
   <meta property="twitter:url" content="https://ayenadis-portfolio.netlify.app/">
   <meta property="twitter:title" content="Ayenadis Temesgen | Software Engineer">
   <meta property="twitter:description" content="Building innovative web applications with cutting-edge technologies">
-  <meta property="twitter:image" content="https://ayenadis-portfolio.netlify.app/images/ayenadis-profile-2025.jpg?t=1738073200">
+  <meta property="twitter:image" content="https://ayenadis-portfolio.netlify.app/images/ayenadis-profile-2025.jpg?t=1738074000">
 
 
   <title>Ayenadis Temesgen | Software Engineer & Full-Stack Developer</title>
