Update project names and add academic details - DMU Service Hub to University Online Student Service Center, Nablis to Church Management System, added 4th year and 3.73 CGPA

--- a/netlify-deploy/resume-short.html
+++ b/netlify-deploy/resume-short.html
@@ -237,7 +237,7 @@
 
         <div class="project">
             <div class="project-header">
-                <div class="project-title">Church Community Website</div>
+                <div class="project-title">Church Management System</div>
                 <div class="project-date">2024</div>
             </div>
             <div class="project-tech">HTML5, Bootstrap, JavaScript</div>
@@ -248,7 +248,8 @@
     <div class="section">
         <div class="section-title">Education & Additional</div>
         <div class="summary">
-            <strong>Education:</strong> Bachelor of Software Engineering (Expected 2026)<br>
+            <strong>Education:</strong> Bachelor of Software Engineering (4th Year), Debre Markos University (Expected 2026)<br>
+            <strong>CGPA:</strong> 3.73/4.0<br>
             <strong>Languages:</strong> English (Fluent), Amharic (Native)<br>
             <strong>Status:</strong> Seeking software engineering opportunities
         </div>
