--- a/resume-short.html
+++ b/resume-short.html
@@ -266,11 +266,11 @@
         
         <div class="project">
             <div class="project-header">
-                <div class="project-title">DMU Service Hub - University Management System</div>
+                <div class="project-title">University Online Student Service Center</div>
                 <div class="project-date">2025</div>
             </div>
             <div class="project-tech">React.js, Node.js, Express.js, PostgreSQL, Socket.io, JWT Authentication</div>
-            <div class="project-desc">Comprehensive student service management system for Debre Markos University. Features real-time notifications, document management, and administrative dashboard with complete CRUD operations.</div>
+            <div class="project-desc">Comprehensive student service management system for universities. Features real-time notifications, document management, and administrative dashboard with complete CRUD operations.</div>
         </div>
 
         <div class="project">
@@ -284,18 +284,19 @@
 
         <div class="project">
             <div class="project-header">
-                <div class="project-title">Nablis - Ethiopian Orthodox Church Management System</div>
+                <div class="project-title">Church Management System</div>
                 <div class="project-date">2025</div>
             </div>
             <div class="project-tech">React.js 19, Node.js, Express.js 4, PostgreSQL, Socket.io, Winston Logging</div>
-            <div class="project-desc">Full-stack web application for St. Mary Ethiopian Orthodox Tewahedo Church. Features multi-step registration with Ethiopian/Amharic labels, role-based access control, real-time messaging, and event management.</div>
+            <div class="project-desc">Full-stack web application for Ethiopian Orthodox Tewahedo Church. Features multi-step registration with Ethiopian/Amharic labels, role-based access control, real-time messaging, and event management.</div>
         </div>
     </div>
 
     <div class="section">
         <div class="section-title">Education & Additional</div>
         <div class="summary">
-            <strong>Education:</strong> Bachelor of Software Engineering, Debre Markos University (Expected 2026)<br>
+            <strong>Education:</strong> Bachelor of Software Engineering (4th Year), Debre Markos University (Expected 2026)<br>
+            <strong>CGPA:</strong> 3.73/4.0<br>
             <strong>Experience:</strong> 2+ years of learning experience in full-stack development<br>
             <strong>Languages:</strong> English, Amharic (Native)<br>
             <strong>Specializations:</strong> Full-Stack Web Development, Database Design, Real-time Applications<br>
