Fix resume summary - update university management systems to university online student service centers

--- a/netlify-deploy/resume-short.html
+++ b/netlify-deploy/resume-short.html
@@ -237,7 +237,7 @@
 
         <div class="project">
             <div class="project-header">
-                <div class="project-title">Church Management System</div>
+                <div class="project-title">Nablis - Church Community Platform</div>
                 <div class="project-date">2024</div>
             </div>
             <div class="project-tech">HTML5, Bootstrap, JavaScript</div>
