--- a/resume-short.html
+++ b/resume-short.html
@@ -235,7 +235,7 @@
         <div class="summary">
             Dedicated Software Engineering student with 2+ years of learning experience in full-stack web development. 
             Specialized in building scalable web applications using React.js, Node.js, and PostgreSQL. 
-            Proven track record of delivering complete projects from concept to deployment, including university management systems and community platforms.
+            Proven track record of delivering complete projects from concept to deployment, including university online student service centers and community platforms.
         </div>
     </div>
 
@@ -284,7 +284,7 @@
 
         <div class="project">
             <div class="project-header">
-                <div class="project-title">Church Management System</div>
+                <div class="project-title">Nablis - Church Community Platform</div>
                 <div class="project-date">2025</div>
             </div>
             <div class="project-tech">React.js 19, Node.js, Express.js 4, PostgreSQL, Socket.io, Winston Logging</div>
