Update Church Management System project - add new description about spiritual teachings and announcements, mark as In Progress

--- a/resume-short.html
+++ b/resume-short.html
@@ -284,11 +284,11 @@
 
         <div class="project">
             <div class="project-header">
-                <div class="project-title">Nablis - Church Community Platform</div>
-                <div class="project-date">2025</div>
+                <div class="project-title">Church Management System</div>
+                <div class="project-date">2025 (In Progress)</div>
             </div>
             <div class="project-tech">React.js 19, Node.js, Express.js 4, PostgreSQL, Socket.io, Winston Logging</div>
-            <div class="project-desc">Full-stack web application for Ethiopian Orthodox Tewahedo Church. Features multi-step registration with Ethiopian/Amharic labels, role-based access control, real-time messaging, and event management.</div>
+            <div class="project-desc">A web-based platform for congregation members to register, receive daily spiritual teachings, announcements, and church news. Supports real-time messaging, role-based access, and comprehensive church community management with Ethiopian/Amharic labels.</div>
         </div>
     </div>
 
