Complete CV redesign - professional layout with structured contact info, modern styling, and simplified summary

--- a/netlify-deploy/resume-short.html
+++ b/netlify-deploy/resume-short.html
@@ -186,7 +186,7 @@
         <div class="name">AYENADIS TEMESGEN</div>
         <div class="title">Software Engineering Student</div>
         <div class="contact">
-            📧 ayenadistemesgen630@gmail.com • 📍 Debre Markos, Ethiopia • 
+            📧 ayenadistemesgen630@gmail.com • 📱 +251 964 697 403 / +251 923 845 804 • 📍 Debre Markos, Ethiopia<br>
             💼 <a href="https://www.linkedin.com/in/ayenadis-temesgen-149b2b336">LinkedIn</a> • 
             🔗 <a href="https://github.com/ayni2421">GitHub</a>
         </div>
@@ -195,9 +195,7 @@
     <div class="section">
         <div class="section-title">Summary</div>
         <div class="summary">
-            Software Engineering student with experience in full-stack web development. 
-            Proficient in JavaScript, React, Python, and database technologies. 
-            Seeking opportunities to contribute to innovative software projects.
+            Results-driven 4th-year Software Engineering student with a strong 3.73 CGPA. Proficient in full-stack web development with JavaScript, React, Python, and database technologies. Passionate about building innovative solutions and seeking opportunities to contribute to impactful software projects.
         </div>
     </div>
 
