--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,17 +13,27 @@
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://ayenadis.dev/">
+  <meta property="og:url" content="https://ayenadis-portfolio.netlify.app/">
   <meta property="og:title" content="Ayenadis Temesgen | Software Engineer">
   <meta property="og:description" content="Building innovative web applications with cutting-edge technologies">
-  <meta property="og:image" content="./images/ayenadisT.jpg">
+  <meta property="og:image" content="https://ayenadis-portfolio.netlify.app/images/ayenadis-profile-2025.jpg?t=1738074000">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:type" content="image/jpeg">
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://ayenadis-portfolio.netlify.app/">
+  <meta property="twitter:title" content="Ayenadis Temesgen | Software Engineer">
+  <meta property="twitter:description" content="Building innovative web applications with cutting-edge technologies">
+  <meta property="twitter:image" content="https://ayenadis-portfolio.netlify.app/images/ayenadis-profile-2025.jpg?t=1738074000">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://ayenadis.dev/">
   <meta property="twitter:title" content="Ayenadis Temesgen | Software Engineer">
   <meta property="twitter:description" content="Building innovative web applications with cutting-edge technologies">
-  <meta property="twitter:image" content="./images/ayenadisT.jpg">
+  <meta property="twitter:image" content="https://ayenadis-portfolio.netlify.app/images/ayenadis-profile-2025.jpg">
 
   <title>Ayenadis Temesgen | Software Engineer & Full-Stack Developer</title>
   
@@ -126,7 +136,7 @@
           <div class="hero-image animate-slide-right">
             <div class="image-wrapper">
               <div class="image-border"></div>
-              <img src="images/ayenadisT.jpg" alt="Ayenadis Temesgen - Software Engineer" class="profile-img" width="400" height="400">
+              <img src="images/ayenadis-profile-2025.jpg" alt="Ayenadis Temesgen - Software Engineer" class="profile-img" width="400" height="400">
             </div>
           </div>
         </div>
@@ -540,7 +550,6 @@
         <p>Built with  and modern web technologies</p>
       </div>
     </div>
-  </footer>
 
   <!-- Scroll to Top Button -->
   <button id="scroll-to-top" class="scroll-to-top" aria-label="Scroll to top" style="display: none;">
