Add portfolio link to CV contact section for easy access when sharing resume

--- a/netlify-deploy/resume-short.html
+++ b/netlify-deploy/resume-short.html
@@ -187,6 +187,7 @@
         <div class="title">Software Engineering Student</div>
         <div class="contact">
             📧 ayenadistemesgen630@gmail.com • 📱 +251 964 697 403 / +251 923 845 804 • 📍 Debre Markos, Ethiopia<br>
+            🌐 <a href="https://ayenadis-portfolio.netlify.app">ayenadis-portfolio.netlify.app</a> • 
             💼 <a href="https://www.linkedin.com/in/ayenadis-temesgen-149b2b336">LinkedIn</a> • 
             🔗 <a href="https://github.com/ayni2421">GitHub</a>
         </div>
