--- a/resume-short.html
+++ b/resume-short.html
@@ -409,6 +409,10 @@
                 <span>Debre Markos, Ethiopia</span>
             </div>
             <div class="contact-item">
+                <i class="fas fa-globe"></i>
+                <a href="https://ayenadis-portfolio.netlify.app" target="_blank">ayenadis-portfolio.netlify.app</a>
+            </div>
+            <div class="contact-item">
                 <i class="fab fa-linkedin"></i>
                 <a href="https://www.linkedin.com/in/ayenadis-temesgen-149b2b336" target="_blank">LinkedIn Profile</a>
             </div>
