Update project title from Church Management System to Church Community Platform

--- a/resume-short.html
+++ b/resume-short.html
@@ -475,7 +475,7 @@
 
         <div class="project">
             <div class="project-header">
-                <div class="project-title">Church Management System</div>
+                <div class="project-title">Church Community Platform</div>
                 <div class="project-date">2025 (In Progress)</div>
             </div>
             <div class="project-tech">React.js 19, Node.js, Express.js 4, PostgreSQL, Socket.io, Winston Logging</div>
